welcome.lessons.welcome.bat.bool1.Close10.scala.error
close10:15: error: reassignment to val
	if (a=b || a+b=20)
             ^